# securedis

./: .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  spawn_redis_server.sh  start.sh
.github/workflows/: tests.yml
src/: data.csv  deserialize.rs  errors.rs  main.rs  process.rs  storage.rs  structs.rs  utils.rs
src/storage/: csv.rs  main.rs  mod.rs
src/tests/integration/: echo.rs  get.rs  mod.rs  set.rs
